--- a/view/login.html
+++ b/view/login.html
@@ -1,3 +1,4 @@
+
 <form id='login' action='../controller/login_controller.php' method='post' accept-charset='UTF-8'>
     <fieldset >
         <legend>Login</legend>
@@ -11,5 +12,8 @@
 
         <input type='submit' name='Submit' value='Submit' />
 
+
     </fieldset>
 </form>
+<div> <img src="001.jpg"> </div>
+<style> img {width: 50%;}</style>
